<resources>
    <string name="app_name">anewstart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="register1">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
</resources>